# ycpp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  LIMITATIONS.md  README.md
.github/workflows/: ci.yml
cmake/: YcppCompileOptions.cmake  YcppGTest.cmake
docs/: USAGE.md
include/ycpp/: ycpp.h  ycpp_arena.h  ycpp_awareness.h  ycpp_byteview.h  ycpp_delete_set.h  ycpp_doc.h  ycpp_envelope.h  ycpp_hashmap.h  ycpp_id.h  ycpp_item.h  ycpp_move.h  ycpp_pool.h  ycpp_protocol.h  ycpp_reader.h  ycpp_ring.h  ycpp_state_vector.h  ycpp_status.h  ycpp_struct_store.h  ycpp_subdoc.h  ycpp_undo.h  ycpp_unicode.h  ycpp_update.h  ycpp_update_v2.h  ycpp_varint.h  ycpp_writer.h  ycpp_yarray.h  ycpp_ymap.h  ycpp_ytext.h
src/: ycpp_placeholder.cpp  ycpp_update_decode_v1.cpp  ycpp_update_encode_v1.cpp
tests/: CMakeLists.txt  test_ycpp_arena.cpp  test_ycpp_awareness.cpp  test_ycpp_compact.cpp  test_ycpp_convergence.cpp  test_ycpp_decode_v1.cpp  test_ycpp_delete_set.cpp  test_ycpp_doc.cpp  test_ycpp_envelope.cpp  test_ycpp_hashmap.cpp  test_ycpp_id.cpp  test_ycpp_pool.cpp  test_ycpp_protocol.cpp  test_ycpp_reader_writer.cpp  test_ycpp_ring.cpp  test_ycpp_state_vector.cpp  test_ycpp_struct_store.cpp  test_ycpp_undo.cpp  test_ycpp_varint.cpp  test_ycpp_yarray_text.cpp
tools/yjs_interop/: CMakeLists.txt  package-lock.json  package.json  test.js  ycpp_cli.cpp
